// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEditor tests  rendering full component as disabled 1`] = `
<div>
  <undefined
    disabled={true}
    isValid={[Function]}
    onAdd={[Function]}
  />
</div>
`;

exports[`ListEditor tests  rendering full component with a defined className 1`] = `
<div
  className="requiredField"
>
  <undefined
    disabled={false}
    isValid={[Function]}
    onAdd={[Function]}
  />
</div>
`;
